# ColorPlugin

./: README.md  pyproject.toml  requirements.txt
src/endstone_color_plugin/: __init__.py  color_plugin.py
